Fix footer covering content

--- a/src/Components/AffirmationCard/AffirmationCard.css
+++ b/src/Components/AffirmationCard/AffirmationCard.css
@@ -25,11 +25,6 @@
     margin-top: 6%;
 }
 
-/* .card-title{
-    font-size: 1rem;
-    font-display: underline;
-} */
-
 .card-description {
     font-size: 2rem;
     text-align: center;
