--- a/src/Components/Favorites/Favorites.css
+++ b/src/Components/Favorites/Favorites.css
@@ -1,23 +1,24 @@
-*{
+* {
     background-color: black;
 }
 
 .mini-fav-container {
     display: flex;
     flex-wrap: wrap;
-    /* justify-content: center;
-    align-content: center; */
+    padding-bottom: 15%;
+    justify-content: center;
 }
 
 .mini-container {
     margin: 2%;
+    /* border: 2px solid red; */
 }
 
 .mini-card {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* margin: 14px; */
+   
     border: .5px solid #edb86b;
     color: white;
     width: 30vw;
@@ -37,7 +38,7 @@
 .mini-card:hover {
     transform: scale(1.02);
     -webkit-filter: brightness(0.8);
-  }
+}
 
 .mini-pic {
     margin: 6%;
