--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,20 +1,21 @@
 .radiance-logo-footer {
-     height: 100%;
-     margin-left: 50px;
-     margin-right: 50px;
- }
- 
- .footer {
+    height: 100%;
+    margin-left: 50px;
+    margin-right: 50px;
+}
+
+.footer {
     height: 20vh;
     position: absolute;
     width: 100vw;
     bottom: 0;
-    display: flex; 
+    display: flex;
     background-color: black;
     contain: content;
     justify-content: center;
     align-items: center;
     left: 0;
     bottom: 0;
-    z-index: 1;
+    /* z-index: 1; */
+    overflow: hidden;
 }
